--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@restorecommerce/chassis-srv": "github:restorecommerce/chassis-srv",
     "@restorecommerce/cluster-service": "github:restorecommerce/cluster-service",
-    "@restorecommerce/kafka-client": "github:restorecommerce/kafka-client",
+    "@restorecommerce/kafka-client": "^0.1.3",
     "@restorecommerce/logger": "^0.1.10",
     "@restorecommerce/protos": "github:restorecommerce/protos",
     "@restorecommerce/resource-base-interface": "github:restorecommerce/resource-base-interface",
