--- a/cfg/config.json
+++ b/cfg/config.json
@@ -231,6 +231,15 @@
   "policies": {
     "type": "database",
     "options": {
+      "urns": {
+        "roleScopingEntity": "urn:restorecommerce:acs:names:roleScopingEntity",
+        "roleScopingInstance": "urn:restorecommerce:acs:names:roleScopingInstance",
+        "ownerEntity": "urn:restorecommerce:acs:names:ownerIndicatoryEntity",
+        "ownerInstance": "urn:restorecommerce:acs:names:ownerInstance",
+        "resourceID": "urn:oasis:names:tc:xacml:1.0:resource:resource-id",
+        "entity": "urn:restorecommerce:acs:names:model:entity",
+        "role": "urn:restorecommerce:acs:names:role"
+      },
       "combiningAlgorithms": [
         {
           "urn": "urn:oasis:names:tc:xacml:3.0:rule-combining-algorithm:deny-overrides",
