--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "dependencies": {
     "@restorecommerce/chassis-srv": "github:restorecommerce/chassis-srv",
     "@restorecommerce/cluster-service": "github:restorecommerce/cluster-service",
-    "@restorecommerce/grpc-client": "^0.0.1",
-    "@restorecommerce/kafka-client": "^0.1.5",
-    "@restorecommerce/logger": "^0.1.11",
+    "@restorecommerce/grpc-client": "0.0.4",
+    "@restorecommerce/kafka-client": "^0.1.7",
+    "@restorecommerce/logger": "^0.1.12",
     "@restorecommerce/protos": "github:restorecommerce/protos",
     "@restorecommerce/resource-base-interface": "github:restorecommerce/resource-base-interface",
-    "@restorecommerce/service-config": "^0.1.5",
+    "@restorecommerce/service-config": "^0.1.6",
     "apollo-boost": "^0.4.4",
     "cross-fetch": "^3.0.4",
     "graphql": "^14.5.8",
@@ -34,22 +34,22 @@
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.142",
+    "@types/lodash": "^4.14.149",
     "@types/mocha": "^5.2.7",
     "@types/nock": "^11.1.0",
-    "@types/node": "^12.7.11",
-    "coveralls": "^3.0.6",
+    "@types/node": "^12.12.14",
+    "coveralls": "^3.0.9",
     "cross-env": "^6.0.3",
-    "mocha": "^6.2.1",
-    "nock": "^11.4.0",
-    "nodemon": "^1.19.3",
+    "mocha": "^6.2.2",
+    "nock": "^11.7.0",
+    "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "rimraf": "^3.0.0",
     "should": "^13.2.3",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "ts-node": "^8.5.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "node start.js",
