--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 node_modules
 npm-debug.log
-*.d.ts
-*.js
-
-dist
+lib
 coverage
 .nyc_output
+.project
+.settings
+.directory
+.vscode
 .env
-
 .vscode/*
 .DS_Store
+test/*.js
+test/*.d.ts
