--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,15 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true
+    "alwaysStrict": true,
+    "outDir": "lib"
   },
   "include": [
-    "./*.ts",
-    "core/*.ts",
-    "core/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "lib",
+    "doc"
   ]
 }
