--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
-    "outDir": "lib"
+    "outDir": "lib",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*.ts"
