Revert "add missing tsconfig changes"
This reverts commit ad8b9dc75db77c5041600ba54d5a3f9c8fbed9ed.
Revert "working test + eslint configuration (with separate lib folder)"

This reverts commit 28136e4028129262204186f906ab492a7bd85245.
Revert "Revert eslint change + fix tests"

This reverts commit bc71720f98b16ac8eb5d794b9677aefb59b6c49d.
Revert "Move source to subfolder and switch to ESLint"

This reverts commit 2545afa43357e3131c6513f845f7410e133f9a9b.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
-    "outDir": "lib"
+    "alwaysStrict": true
   },
   "include": [
-    "./src/**/*.ts",
-    "./test/**/*.ts"
+    "./*.ts",
+    "core/*.ts",
+    "core/**/*.ts"
   ],
   "exclude": [
-    "doc",
-    "lib",
     "node_modules"
   ]
 }
