--- a/package.json
+++ b/package.json
@@ -38,13 +38,8 @@
     "@types/mocha": "^5.2.7",
     "@types/nock": "^11.1.0",
     "@types/node": "^12.12.14",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
     "coveralls": "^3.0.9",
     "cross-env": "^6.0.3",
-    "eslint": "^6.7.0",
-    "eslint-plugin-prefer-arrow-functions": "^3.0.1",
     "mocha": "^6.2.2",
     "nock": "^11.7.0",
     "nodemon": "^2.0.1",
@@ -53,24 +48,24 @@
     "rimraf": "^3.0.0",
     "should": "^13.2.3",
     "ts-node": "^8.5.2",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "node start.js",
-    "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'ts-node' src/start.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --watch './*.ts' --exec 'ts-node' start.ts --trace-warnings",
     "pretest": "npm run build && npm run tsctests && npm run lint",
     "test": "cross-env NODE_ENV=test nyc npm run mocha",
-    "lint": "eslint src --ext .ts",
-    "mocha": "cross-env NODE_ENV=test mocha -R spec --timeout 60000 lib/test/core_test.js lib/test/microservice_test.js --stack-trace --exit",
+    "lint": "cross-env NODE_ENV=development tslint core/**/*.ts *.ts test/core_test.ts test/microservice_test.ts",
+    "mocha": "cross-env NODE_ENV=test mocha -R spec --timeout 60000 test/core_test.js test/microservice_test.js --stack-trace --exit",
     "mocha-debug": "mocha -R spec test/core_test.js test/microservice_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
     "coveralls": "cross-env NODE_ENV=test; nyc --reporter text --reporter lcov npm test",
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "tsc -d",
-    "build:clean": "rimraf lib",
+    "build:clean": "rimraf *.js core/**/*.js",
     "build": "npm-run-all lint build:clean build:tsc",
-    "healthcheck": "node src/healthcheck.js"
+    "healthcheck": "node healthcheck.js"
   },
   "engines": {
     "node": ">= 9.2.0"
