--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/chassis-srv": "^0.0.1",
+    "@restorecommerce/chassis-srv": "0.0.2",
     "@restorecommerce/cluster-service": "^0.1.4",
-    "@restorecommerce/grpc-client": "0.0.4",
+    "@restorecommerce/grpc-client": "0.0.5",
     "@restorecommerce/kafka-client": "^0.1.7",
     "@restorecommerce/logger": "^0.1.12",
-    "@restorecommerce/protos": "^0.0.1",
+    "@restorecommerce/protos": "0.0.2",
     "@restorecommerce/resource-base-interface": "^0.0.1",
     "@restorecommerce/service-config": "^0.1.6",
     "apollo-boost": "^0.4.4",
     "cross-fetch": "^3.0.4",
     "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
+    "graphql-tag": "^2.10.3",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "node-eval": "^2.0.0",
@@ -36,37 +36,38 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
-    "@types/mocha": "^5.2.7",
+    "@types/mocha": "^7.0.1",
     "@types/nock": "^11.1.0",
-    "@types/node": "^12.12.14",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
+    "@types/node": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "coveralls": "^3.0.9",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.0",
     "eslint": "^6.7.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
-    "mocha": "^6.2.2",
-    "nock": "^11.7.0",
+    "mocha": "^7.0.1",
+    "nock": "^12.0.0",
     "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
-    "rimraf": "^3.0.0",
+    "nyc": "^15.0.0",
+    "rimraf": "^3.0.2",
     "should": "^13.2.3",
     "ts-node": "^8.5.3",
-    "tslint": "^5.20.1",
+    "tslint": "^6.0.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "start": "node lib/start.js",
+    "start": "npm run createtopics && node lib/start.js",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'ts-node' src/start.ts",
-    "pretest": "npm run build && npm run tsctests && npm run lint",
+    "pretest": "npm run build && npm run tsctests && npm run createtopics && npm run lint",
     "test": "cross-env NODE_ENV=test nyc npm run mocha",
     "lint": "eslint src --ext .ts",
     "mocha": "cross-env NODE_ENV=test mocha -R spec --timeout 60000 test/core_test.js test/microservice_test.js --stack-trace --exit",
     "mocha-debug": "mocha -R spec test/core_test.js test/microservice_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
     "coveralls": "cross-env NODE_ENV=test; nyc --reporter text --reporter lcov npm test",
+    "createtopics": "node setupTopics.js io.restorecommerce.command",
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "tsc -d",
     "build:clean": "rimraf lib",
