up chassis-srv and added config to remove buffer fields

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -8,12 +8,18 @@
         "isAllowed": {
           "transport": [
             "grpc"
-          ]
+          ],
+          "bufferFields": {
+            "Request": "context"
+          }
         },
         "whatIsAllowed": {
           "transport": [
             "grpc"
-          ]
+          ],
+          "bufferFields": {
+            "Request": "context"
+          }
         }
       },
       "io-restorecommerce-policy-srv": {
