--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/chassis-srv": "0.0.2",
+    "@restorecommerce/chassis-srv": "^0.0.3",
     "@restorecommerce/cluster-service": "^0.1.4",
     "@restorecommerce/grpc-client": "0.0.5",
     "@restorecommerce/kafka-client": "^0.1.7",
