To support `hierarchicalRoleScoping` if HR scope matching for subject should be considered or skipped.

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -255,6 +255,7 @@
       "urns": {
         "roleScopingEntity": "urn:restorecommerce:acs:names:roleScopingEntity",
         "roleScopingInstance": "urn:restorecommerce:acs:names:roleScopingInstance",
+        "hierarchicalRoleScoping": "urn:restorecommerce:acs:names:hierarchicalRoleScoping",
         "ownerEntity": "urn:restorecommerce:acs:names:ownerIndicatoryEntity",
         "ownerInstance": "urn:restorecommerce:acs:names:ownerInstance",
         "resourceID": "urn:oasis:names:tc:xacml:1.0:resource:resource-id",
