--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -8,6 +8,9 @@
       "source": "access-control-srv"
     }
   },
+  "redis": {
+    "host": "redis"
+  },
   "server": {
     "transports": [
       {
