--- a/package.json
+++ b/package.json
@@ -17,45 +17,46 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/chassis-srv": "^0.0.3",
+    "@restorecommerce/acs-client": "https://github.com/restorecommerce/acs-client#acs-client-ctx-removed",
+    "@restorecommerce/chassis-srv": "^0.1.1",
     "@restorecommerce/cluster-service": "^0.1.4",
-    "@restorecommerce/grpc-client": "0.0.5",
-    "@restorecommerce/kafka-client": "^0.1.7",
+    "@restorecommerce/grpc-client": "0.0.6",
+    "@restorecommerce/kafka-client": "^0.1.10",
     "@restorecommerce/logger": "^0.1.16",
-    "@restorecommerce/protos": "0.0.4",
-    "@restorecommerce/resource-base-interface": "^0.0.1",
-    "@restorecommerce/service-config": "^0.1.6",
-    "apollo-boost": "^0.4.7",
-    "cross-fetch": "^3.0.4",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.3",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.15",
+    "@restorecommerce/protos": "https://github.com/restorecommerce/protos#protos-acs",
+    "@restorecommerce/resource-base-interface": "0.0.4",
+    "@restorecommerce/service-config": "^0.2.0",
+    "apollo-boost": "^0.4.9",
+    "cross-fetch": "^3.0.5",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.10.4",
+    "js-yaml": "^3.14.0",
+    "lodash": "^4.17.19",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.149",
-    "@types/mocha": "^7.0.2",
+    "@types/lodash": "^4.14.158",
+    "@types/mocha": "^8.0.0",
     "@types/nock": "^11.1.0",
-    "@types/node": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "coveralls": "^3.0.11",
+    "@types/node": "^14.0.24",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^6.7.0",
+    "eslint": "^7.5.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
-    "mocha": "^7.1.1",
-    "nock": "^12.0.3",
-    "nodemon": "^2.0.3",
+    "mocha": "^8.0.1",
+    "nock": "^13.0.2",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.0.1",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "should": "^13.2.3",
-    "ts-node": "^8.8.2",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
