--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
+    "skipLibCheck": true,
     "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
