restructured readMetaData and fixed tests

--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -11,6 +11,11 @@
   "redis": {
     "host": "redis"
   },
+  "authorization": {
+    "cache": {
+      "host": "redis"
+    }
+  },
   "server": {
     "transports": [
       {
