fix to truncate rules, policies and pol_sets

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "pretest": "npm run build && npm run tsctests && npm run createtopics && npm run lint",
     "test": "cross-env NODE_ENV=test nyc npm run mocha",
     "lint": "eslint src --ext .ts",
-    "mocha": "cross-env NODE_ENV=test mocha -R spec --timeout 60000 test/core_test.js test/microservice_test.js --stack-trace --exit",
-    "mocha-debug": "mocha -R spec test/core_test.js test/microservice_test.js --inspect-brk",
+    "mocha": "cross-env NODE_ENV=test mocha -R spec --timeout 60000 test/*_test.js --stack-trace --exit",
+    "mocha-debug": "mocha -R spec test/*_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
     "coveralls": "cross-env NODE_ENV=test; nyc --reporter text --reporter lcov npm test",
     "createtopics": "node setupTopics.js io.restorecommerce.command",
