added support for flush command interface

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -257,6 +257,20 @@
         "protoRoot": "node_modules/@restorecommerce/protos/",
         "messageObject": "io.restorecommerce.commandinterface.CommandResponse"
       },
+      "flushCacheCommand": {
+        "protos": [
+          "io/restorecommerce/commandinterface.proto"
+        ],
+        "protoRoot": "node_modules/@restorecommerce/protos/",
+        "messageObject": "io.restorecommerce.commandinterface.CommandRequest"
+      },
+      "flushCacheResponse": {
+        "protos": [
+          "io/restorecommerce/commandinterface.proto"
+        ],
+        "protoRoot": "node_modules/@restorecommerce/protos/",
+        "messageObject": "io.restorecommerce.commandinterface.CommandResponse"
+      },
       "topics": {
         "policy.resource": {
           "topic": "io.restorecommerce.policies.resource",
@@ -290,7 +304,8 @@
             "restoreCommand",
             "resetCommand",
             "configUpdateCommand",
-            "setApiKeyCommand"
+            "setApiKeyCommand",
+            "flushCacheCommand"
           ]
         }
       }
