changes to make HR scope request and get response

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -271,6 +271,20 @@
         "protoRoot": "node_modules/@restorecommerce/protos/",
         "messageObject": "io.restorecommerce.commandinterface.CommandResponse"
       },
+      "hierarchicalScopesRequest": {
+        "protos": [
+          "io/restorecommerce/user.proto"
+        ],
+        "protoRoot": "node_modules/@restorecommerce/protos/",
+        "messageObject": "io.restorecommerce.user.HierarchicalScopesRequest"
+      },
+      "hierarchicalScopesResponse": {
+        "protos": [
+          "io/restorecommerce/user.proto"
+        ],
+        "protoRoot": "node_modules/@restorecommerce/protos/",
+        "messageObject": "io.restorecommerce.user.HierarchicalScopesResponse"
+      },
       "topics": {
         "policy.resource": {
           "topic": "io.restorecommerce.policies.resource",
@@ -306,6 +320,12 @@
             "configUpdateCommand",
             "setApiKeyCommand",
             "flushCacheCommand"
+          ]
+        },
+        "user": {
+          "topic": "io.restorecommerce.user",
+          "events": [
+            "hierarchicalScopesResponse"
           ]
         }
       }
