--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restorecommerce/access-control-srv",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Access Control Service",
   "main": "lib/start.js",
   "author": "n-fuse GmbH",
@@ -17,13 +17,13 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "^0.2.4",
+    "@restorecommerce/acs-client": "^0.2.5",
     "@restorecommerce/chassis-srv": "^0.1.3",
     "@restorecommerce/cluster-service": "^0.1.4",
     "@restorecommerce/grpc-client": "0.0.7",
     "@restorecommerce/kafka-client": "^0.1.11",
     "@restorecommerce/logger": "^0.2.1",
-    "@restorecommerce/protos": "https://github.com/restorecommerce/protos#protos-acs",
+    "@restorecommerce/protos": "^0.0.9",
     "@restorecommerce/resource-base-interface": "0.0.5",
     "@restorecommerce/service-config": "^0.2.0",
     "apollo-boost": "^0.4.9",
