--- a/cfg/config.json
+++ b/cfg/config.json
@@ -126,6 +126,18 @@
             "grpc"
           ]
         }
+      },
+      "grpc-health-v1": {
+        "check": {
+          "transport": [
+            "grpc"
+          ]
+        },
+        "watch": {
+          "transport": [
+            "grpc"
+          ]
+        }
       }
     },
     "transports": [
@@ -137,17 +149,19 @@
           "io-restorecommerce-policy-srv": "io.restorecommerce.policy.Service",
           "io-restorecommerce-rule-srv": "io.restorecommerce.rule.Service",
           "io-restorecommerce-policy-set-srv": "io.restorecommerce.policy_set.Service",
-          "io-restorecommerce-access-control-ci": "io.restorecommerce.commandinterface.Service"
+          "io-restorecommerce-access-control-ci": "io.restorecommerce.commandinterface.Service",
+          "grpc-health-v1": "grpc.health.v1.Health"
         },
         "protos": [
           "io/restorecommerce/access_control.proto",
           "io/restorecommerce/policy.proto",
           "io/restorecommerce/rule.proto",
           "io/restorecommerce/policy_set.proto",
-          "io/restorecommerce/commandinterface.proto"
+          "io/restorecommerce/commandinterface.proto",
+          "grpc/health/v1/health.proto"
         ],
         "protoRoot": "node_modules/@restorecommerce/protos/",
-        "addr": "localhost:50061"
+        "addr": "0.0.0.0:50061"
       }
     ]
   },
