--- a/package.json
+++ b/package.json
@@ -17,46 +17,46 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "^0.2.11",
+    "@restorecommerce/acs-client": "^0.2.13",
     "@restorecommerce/chassis-srv": "^0.1.5",
     "@restorecommerce/cluster-service": "^0.1.4",
     "@restorecommerce/grpc-client": "0.0.7",
     "@restorecommerce/kafka-client": "^0.1.12",
-    "@restorecommerce/logger": "^0.2.1",
-    "@restorecommerce/protos": "^0.0.11",
+    "@restorecommerce/logger": "^0.3.5",
+    "@restorecommerce/protos": "0.0.12",
     "@restorecommerce/resource-base-interface": "0.0.5",
-    "@restorecommerce/service-config": "^0.2.0",
+    "@restorecommerce/service-config": "^0.3.1",
     "apollo-boost": "^0.4.9",
-    "cross-fetch": "^3.0.5",
+    "cross-fetch": "^3.0.6",
     "graphql": "^15.3.0",
-    "graphql-tag": "^2.10.4",
+    "graphql-tag": "^2.11.0",
     "js-yaml": "^3.14.0",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.158",
-    "@types/mocha": "^8.0.0",
+    "@types/lodash": "^4.14.162",
+    "@types/mocha": "^8.0.3",
     "@types/nock": "^11.1.0",
-    "@types/node": "^14.0.24",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@types/node": "^14.11.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.5.0",
+    "eslint": "^7.11.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
-    "mocha": "^8.0.1",
-    "nock": "^13.0.2",
-    "nodemon": "^2.0.4",
+    "mocha": "^8.1.3",
+    "nock": "^13.0.4",
+    "nodemon": "^2.0.5",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "should": "^13.2.3",
     "ts-node": "^9.0.0",
-    "tslint": "^6.1.2",
-    "typescript": "^4.0.2"
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
