--- a/cfg/config.json
+++ b/cfg/config.json
@@ -408,6 +408,30 @@
         "isAllowed": {},
         "whatIsAllowed": {}
       }
+    },
+    "user": {
+      "transports": {
+        "grpc": {
+          "service": "io.restorecommerce.user.Service",
+          "protos": [
+            "io/restorecommerce/user.proto"
+          ],
+          "protoRoot": "node_modules/@restorecommerce/protos/",
+          "timeout": 3000
+        }
+      },
+      "loadbalancer": {
+        "name": "roundRobin"
+      },
+      "publisher": {
+        "name": "static",
+        "instances": [
+          "grpc://localhost:50052"
+        ]
+      },
+      "endpoints": {
+        "findByToken": {}
+      }
     }
   },
   "policies": {
