--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restorecommerce/access-control-srv",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Access Control Service",
   "main": "lib/start.js",
   "author": "n-fuse GmbH",
@@ -17,18 +17,18 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "0.2.18-alpha.4",
-    "@restorecommerce/chassis-srv": "^0.1.6",
+    "@restorecommerce/acs-client": "^0.2.18",
+    "@restorecommerce/chassis-srv": "^0.1.7",
     "@restorecommerce/cluster-service": "^0.1.4",
-    "@restorecommerce/grpc-client": "0.0.7",
-    "@restorecommerce/kafka-client": "^0.1.12",
-    "@restorecommerce/logger": "^0.3.5",
-    "@restorecommerce/protos": "^0.0.15-alpha.3",
-    "@restorecommerce/resource-base-interface": "0.0.5",
-    "@restorecommerce/service-config": "^0.3.1",
+    "@restorecommerce/grpc-client": "0.0.8",
+    "@restorecommerce/kafka-client": "^0.1.13",
+    "@restorecommerce/logger": "^0.4.0",
+    "@restorecommerce/protos": "0.0.15",
+    "@restorecommerce/resource-base-interface": "0.0.6",
+    "@restorecommerce/service-config": "^0.3.2",
     "apollo-boost": "^0.4.9",
     "cross-fetch": "^3.0.6",
-    "graphql": "^15.3.0",
+    "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20",
@@ -36,27 +36,27 @@
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.162",
-    "@types/mocha": "^8.0.3",
+    "@types/lodash": "^4.14.165",
+    "@types/mocha": "^8.0.4",
     "@types/nock": "^11.1.0",
-    "@types/node": "^14.11.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@types/node": "^14.14.8",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.11.0",
+    "eslint": "^7.13.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
-    "mocha": "^8.1.3",
-    "nock": "^13.0.4",
-    "nodemon": "^2.0.5",
+    "mocha": "^8.2.1",
+    "nock": "^13.0.5",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "should": "^13.2.3",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
