--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restorecommerce/access-control-srv",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Access Control Service",
   "main": "lib/start.js",
   "author": "n-fuse GmbH",
@@ -17,13 +17,13 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "^0.2.19",
+    "@restorecommerce/acs-client": "^0.2.23",
     "@restorecommerce/chassis-srv": "^0.1.7",
     "@restorecommerce/cluster-service": "^0.1.4",
     "@restorecommerce/grpc-client": "0.0.8",
     "@restorecommerce/kafka-client": "^0.1.13",
     "@restorecommerce/logger": "^0.4.1",
-    "@restorecommerce/protos": "0.0.16",
+    "@restorecommerce/protos": "^0.0.17",
     "@restorecommerce/resource-base-interface": "0.0.6",
     "@restorecommerce/service-config": "^0.3.2",
     "apollo-boost": "^0.4.9",
