--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restorecommerce/access-control-srv",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Access Control Service",
   "main": "lib/start.js",
   "author": "n-fuse GmbH",
@@ -20,17 +20,17 @@
     "@restorecommerce/acs-client": "^0.2.23",
     "@restorecommerce/chassis-srv": "^0.1.7",
     "@restorecommerce/cluster-service": "^0.1.4",
-    "@restorecommerce/grpc-client": "0.0.8",
+    "@restorecommerce/grpc-client": "^0.0.9",
     "@restorecommerce/kafka-client": "^0.1.13",
-    "@restorecommerce/logger": "^0.4.1",
-    "@restorecommerce/protos": "^0.0.17",
-    "@restorecommerce/resource-base-interface": "0.0.6",
+    "@restorecommerce/logger": "^0.5.4",
+    "@restorecommerce/protos": "^0.0.20",
+    "@restorecommerce/resource-base-interface": "^0.0.7",
     "@restorecommerce/service-config": "^0.3.2",
     "apollo-boost": "^0.4.9",
     "cross-fetch": "^3.0.6",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
-    "js-yaml": "^3.14.0",
+    "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.6"
