--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restorecommerce/access-control-srv",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "Access Control Service",
   "main": "lib/start.js",
   "author": "n-fuse GmbH",
@@ -22,10 +22,10 @@
     "@restorecommerce/cluster-service": "^0.1.4",
     "@restorecommerce/grpc-client": "^0.0.9",
     "@restorecommerce/kafka-client": "^0.1.13",
-    "@restorecommerce/logger": "^0.5.4",
+    "@restorecommerce/logger": "^0.6.1",
     "@restorecommerce/protos": "^0.0.20",
     "@restorecommerce/resource-base-interface": "^0.0.7",
-    "@restorecommerce/service-config": "^0.3.2",
+    "@restorecommerce/service-config": "^0.4.1",
     "apollo-boost": "^0.4.9",
     "cross-fetch": "^3.0.6",
     "graphql": "^15.4.0",
@@ -56,7 +56,7 @@
     "should": "^13.2.3",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
