--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   ],
   "dependencies": {
     "@restorecommerce/acs-client": "^0.2.23",
-    "@restorecommerce/chassis-srv": "^0.1.11",
+    "@restorecommerce/chassis-srv": "^0.1.12",
     "@restorecommerce/cluster-service": "^0.1.4",
     "@restorecommerce/grpc-client": "^0.0.9",
     "@restorecommerce/kafka-client": "^0.1.13",
     "@restorecommerce/logger": "^0.6.4",
     "@restorecommerce/protos": "^0.0.22",
-    "@restorecommerce/resource-base-interface": "^0.0.7",
+    "@restorecommerce/resource-base-interface": "^0.0.9",
     "@restorecommerce/service-config": "^0.4.1",
     "apollo-boost": "^0.4.9",
-    "cross-fetch": "^3.0.6",
+    "cross-fetch": "^3.1.2",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "js-yaml": "^4.0.0",
@@ -37,17 +37,18 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.165",
-    "@types/mocha": "^8.0.4",
+    "@types/mocha": "^8.2.2",
     "@types/nock": "^11.1.0",
-    "@types/node": "^14.14.8",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.13.0",
+    "eslint": "^7.22.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
-    "mocha": "^8.2.1",
+    "grpc-mock": "^0.7.0",
+    "mocha": "^8.3.2",
     "nock": "^13.0.5",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
@@ -56,7 +57,7 @@
     "should": "^13.2.3",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "4.0.5"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
