--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,9 @@ jobs:
         with:
           node-version: '14.15'
 
+      - name: Upgrade NPM
+        run: npm i -g npm
+
       - name: Install Dependencies
         run: npm ci
 
@@ -31,6 +34,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.15'
+
+      - name: Upgrade NPM
+        run: npm i -g npm
 
       - name: Setup System
         uses: restorecommerce/setup-system-action@v1
