--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -45,7 +45,9 @@
   },
   "events": {
     "kafka": {
-      "kafkaHost": "kafka:9092"
+      "kafka": {
+        "brokers": ["kafka:9092"]
+      }
     }
   },
   "database": {
