--- a/package.json
+++ b/package.json
@@ -17,55 +17,54 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "^0.2.23",
-    "@restorecommerce/chassis-srv": "^0.1.12",
-    "@restorecommerce/cluster-service": "^0.1.4",
+    "@restorecommerce/acs-client": "0.3.1",
+    "@restorecommerce/chassis-srv": "^0.2.3",
+    "@restorecommerce/cluster-service": "^0.1.6",
     "@restorecommerce/grpc-client": "^0.0.9",
-    "@restorecommerce/kafka-client": "^0.1.13",
-    "@restorecommerce/logger": "^0.6.4",
+    "@restorecommerce/kafka-client": "^0.2.8",
+    "@restorecommerce/logger": "^0.8.0",
     "@restorecommerce/protos": "^0.0.22",
-    "@restorecommerce/resource-base-interface": "^0.0.9",
-    "@restorecommerce/service-config": "^0.4.1",
+    "@restorecommerce/resource-base-interface": "^0.1.1",
+    "@restorecommerce/service-config": "^0.4.5",
     "apollo-boost": "^0.4.9",
-    "cross-fetch": "^3.1.2",
+    "cross-fetch": "^3.1.4",
     "graphql": "^15.4.0",
-    "graphql-tag": "^2.11.0",
-    "js-yaml": "^4.0.0",
+    "graphql-tag": "^2.12.4",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.20",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.165",
+    "@types/lodash": "^4.14.170",
     "@types/mocha": "^8.2.2",
     "@types/nock": "^11.1.0",
     "@types/node": "^14.14.35",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.22.0",
+    "eslint": "^7.28.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
     "grpc-mock": "^0.7.0",
-    "mocha": "^8.3.2",
-    "nock": "^13.0.5",
+    "mocha": "^9.0.0",
+    "nock": "^13.1.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "should": "^13.2.3",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'ts-node' src/start.ts",
-    "pretest": "npm run build && npm run tsctests && npm run createtopics && npm run lint",
-    "test": "cross-env NODE_ENV=test nyc npm run mocha",
+    "test": "npm run lint && nyc npm run mocha",
     "lint": "eslint src --ext .ts",
-    "mocha": "cross-env NODE_ENV=test mocha -R spec --timeout 60000 test/*_test.js --stack-trace --exit",
+    "mocha": "cross-env NODE_ENV=test mocha --stack-trace --exit --timeout 60000",
     "mocha-debug": "mocha -R spec test/*_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
     "lcov-report": "nyc report --reporter=lcov",
@@ -78,6 +77,6 @@
     "healthcheck": "node lib/healthcheck.js"
   },
   "engines": {
-    "node": ">= 12.0.0"
+    "node": ">= 14.0.0"
   }
 }
