ACL list verification

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -386,7 +386,8 @@
       "read": "urn:restorecommerce:acs:names:action:read",
       "modify": "urn:restorecommerce:acs:names:action:modify",
       "delete": "urn:restorecommerce:acs:names:action:delete",
-      "organization": "urn:restorecommerce:acs:model:organization.Organization"
+      "organization": "urn:restorecommerce:acs:model:organization.Organization",
+      "aclIndicatoryEntity": "urn:restorecommerce:acs:names:aclIndicatoryEntity"
     },
     "cache": {
       "host": "localhost",
