--- a/cfg/config.json
+++ b/cfg/config.json
@@ -387,7 +387,8 @@
       "modify": "urn:restorecommerce:acs:names:action:modify",
       "delete": "urn:restorecommerce:acs:names:action:delete",
       "organization": "urn:restorecommerce:acs:model:organization.Organization",
-      "aclIndicatoryEntity": "urn:restorecommerce:acs:names:aclIndicatoryEntity"
+      "aclIndicatoryEntity": "urn:restorecommerce:acs:names:aclIndicatoryEntity",
+      "aclInstance": "urn:restorecommerce:acs:names:aclInstance"
     },
     "cache": {
       "host": "localhost",
@@ -460,7 +461,9 @@
         "resourceID": "urn:oasis:names:tc:xacml:1.0:resource:resource-id",
         "entity": "urn:restorecommerce:acs:names:model:entity",
         "role": "urn:restorecommerce:acs:names:role",
-        "operation": "urn:restorecommerce:acs:names:operation"
+        "operation": "urn:restorecommerce:acs:names:operation",
+        "aclIndicatoryEntity": "urn:restorecommerce:acs:names:aclIndicatoryEntity",
+        "aclInstance": "urn:restorecommerce:acs:names:aclInstance"
       },
       "combiningAlgorithms": [
         {
